# scratch-mcp

./: .gitignore  README.md  pyproject.toml  server.py  test_parkour.py  test_project.py  verify.py
src/: project.py  server.py
