[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "scratch-mcp"
version = "0.1.0"
description = "MCP server for AI to create Scratch sb3 projects programmatically"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp>=1.0.0"]
